# LicenseMatrix

./: pyproject.toml
DOCS/: relations.dot
licensematrix/: license_matrix.py
licensematrix/dev/: update_matrix.py
